.golden/3089090107905559368/golden

INITIALPATH:7:20: error:
    • INITIALPATH:7:28:
  |
7 | main = putStrLn [f|{hello:-s}|]
  |                            ^
Type incompatible with sign field (-), use any of {'b', 'd', 'e', 'E', 'f', 'F', 'g', 'G', 'n', 'o', 'x', 'X', '%'} or remove the sign field.

    • In the quasi-quotation: [f|{hello:-s}|]
  |
7 | main = putStrLn [f|{hello:-s}|]
  |                    ^^^^^^^^^^^^
